@@ -3,6 +3,7 @@ v3.9.1:
   - Import TomoMasks: it now admits {TS} pattern.
   - Import TS: Improve TS accumulated dose determination when using mdoc.
   - Import Tomograms: exclusion words fixed in import tomograms when not using a pattern.
+  - Scipion metadata viewer for SetOfTomograms and SetOfTomoMasks: updated the visible fields and order.
  Developers:
   - Tilt Series class:
      * Fix the clone method --> now it is a literal clone is expected by default instead
